--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ChaouchAbdessalem4Twin5
 server.port=8089
 spring.datasource.url=jdbc:mysql://localhost:3306/4twin5
 spring.datasource.username=root
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
